# bolna

./: .env.sample  .gitignore  BolnaServer.py  LICENSE  Makefile  README.md  bug.llama_index  demo.py  logs.out  model_pricing.json  pyproject.toml  quickstart.py  quickstart_server.py  requirements.txt  server.py  twilio_api_server.py
.github/: FUNDING.yml
agent_data/airbnb_job/: conversation_details.json  users.json
agent_data/ecc47cdb-b66e-4a8d-8383-2499ca48ba6d/: conversation_details.json
agent_data/indian_elections_vernacular/: conversation_details.json  users.json
agent_data/sample_agent/: conversaton_details.json.sample  users.json.sample
agent_data/sorting_hat/: conversation_details.json
agents/: constants.py  models.py  prompts.py
agents/agent_manager/: __init__.py  assistant_manager.py  task_manager.py
agents/agent_types/: __init__.py  contextual_conversational_agent.py  graph_based_conversational_agent.py  notification_agent.py  summarization_agent.py
agents/database/: base_database.py  dynamodb.py
bolna/: __init__.py  assistant.py  constants.py  models.py  prompts.py  providers.py
bolnaTestVersion/: __init__.py  prompts.py  providers.py
database/: base_database.py  dynamodb.py
local_setup/: .env.sample  README.md  demo_server.py  docker-compose.yml  docker-compose_old.yml  logs.out  ngrok-config.yml  quickstart_client.py  quickstart_ingestion_server.py  quickstart_server.py  requirements.txt  server.py  telephony.py
scripts/: initiate_agent_call.py  preprocess.py
tmp/: bolna_server.text  logs.txt  logs.txt_long  note  open_ai.txt
(+202 files in other folders)
